--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Dependencies
-node_modules/
-
-# Build outputs
-dist/
-dist-ssr/
+node_modules
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/
+.vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Yarn files — keep these under version control
-!yarn.lock
-!.yarnrc
-!.yarnrc.yml
-!.pnp.cjs
-!.pnp.js
-!.yarn/
