--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-force-graph": "^1.47.6",
+    "react-force-graph-2d": "^1.27.1",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15",
     "vite-plugin-glsl": "^1.4.0",
